# dira-migrate

./: pyproject.toml
diramigrate/: __init__.py  aerich.py  console.py  provider.py
tests/: test_diramigrate.py
