[tool.poetry]
name = "diramigrate"
version = "0.1.0"
description = ""
authors = ["drabbit <d@rabbit.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aerich = "^0.7.2"
diracore = "*"
dira = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
